--- a/index.html
+++ b/index.html
@@ -2,28 +2,100 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Halaman Home</title>
+    <link href="public/css/style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Media Online</h1>
-    <h3>Sosial Media Developer</h3>
-    <p>Belajar dan berbagi agar hidup menjadi lebih baik</p>
-    <h4>Benefit Join di Media Online</h4>
-    <ul>
-        <li>Mendapatkan motivasi dari sesama para Developer</li>
-        <li>Sharing knowlenge</li>
-        <li>Dibuat oleh calon web developer terbaik</li>
-    </ul>
-    <h4>Cara Bergabung ke Media Online</h4>
-    <ol>
-        <li>Mengunjungi Website ini</li>
-        <li>Mendaftarkan di <a href="form.html" title="SIlahkan Register">Form Sign Up</a></li>
-        <li>Selesai</li>
-    </ol>
+    <header>
+        <img id="logo" src="public/img/laravel.png" width="50px" />
+        <nav>
+            <ul>
+                <a href="#">
+                    <li>Home</li>
+                </a>
+                <a href="#">
+                    <li>About</li>
+                </a>
+                <a href="#">
+                    <li>Contact</li>
+                </a>
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h1>Featured Posts</h1>
+        <div id="article-list">
+            <article>
+                <a href="">
+                    <h3>Lorem Post 1</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex,
+                    et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea
+                    quem sint,
+                    nam in minim voluptatibus.
+                    Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 2</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex,
+                    et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea
+                    quem sint,
+                    nam in minim voluptatibus.
+                    Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 3</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex,
+                    et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea
+                    quem sint,
+                    nam in minim voluptatibus.
+                    Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 4</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex,
+                    et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea
+                    quem sint,
+                    nam in minim voluptatibus.
+                    Etiam placerat eam in.
+                </p>
+            </article>
+            <article>
+                <a href="">
+                    <h3>Lorem Post 5</h3>
+                </a>
+                <p>
+                    Lorem Ipsum Dolor Sit Amet, mea te verear signiferumque, per illum labores ne. Blandit omnesque
+                    scripserit pri ex,
+                    et pri dicant eirmod deserunt. Aeque perpetua ea nec. Sit erant patrioque delicatissimi ut. Et sea
+                    quem sint,
+                    nam in minim voluptatibus.
+                    Etiam placerat eam in.
+                </p>
+            </article>
+        </div>
+    </section>
+    <footer>
+        <h5>copyright &copy; 2019 by pks digital school</h5>
+    </footer>
 </body>
 
 </html>
