--- a/index.html
+++ b/index.html
@@ -1,184 +1,104 @@
 <!DOCTYPE html>
-
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
-
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Tugas Component</title>
-
-    <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
-
+    <title>Tugas Vue Router - Muhammad Azzam Nur Alwi Mansyur</title>
 </head>
 
 <body>
-
     <div id="app">
+        <h1>Belajar Vue Router</h1>
 
-        <div class="formInput">
+        <!-- Pengganti tag <a href=""></a>  -->
+        <router-link to="/halaman1">Component1</router-link>
+        <router-link to="/halaman2">Component2</router-link>
+        <router-link to="/halaman3">Component3</router-link>
+        <hr>
 
-            <input type="text" v-model="formUser">
-
-            <button v-if="!editButton" @click="addUser">
-
-                Add</button>
-
-            <button v-if="editButton" @click="updateUser">
-
-                Update</button>
-
-        </div>
-
-        <users-component :users='users' :edit-user='editUser' :delete-user='deleteUser' @edit-user='editUser($event)'
-            @delete-user='deleteUser($event)'>
-        </users-component>
-
+        <!-- Untuk Menampilkan component secara dinamis , sesuai dengan route yang diakses -->
+        <router-view></router-view>
     </div>
 
-
-
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
     <script>
-        const UsersComponent = {
-            template: `
-            <div class="usersList">
-
-                <ul>
-
-                    <li v-for="(user , index) in users" :key="index">
-
-                        {{ user.name }} ||
-
-                        <button @click="$emit('edit-user', index)">Edit</button>
-
-                        <button @click="$emit('delete-user', index)">Delete</button>
-
-                    </li>
-
-                </ul>
-
-            </div>
-        `,
-            props: ['form-user', 'reverseUsers', 'index', 'edit-user', 'delete-user', 'edit-Button', 'id-Selected',
-                'users', 'name'
-            ],
-            data() {
-                return {
-
-                }
-            }
-
+        // Kita membuat 3 component
+        const Component1 = {
+            template: '<div>Ini Halaman Component 1, boleh diakses siapa saja.</div>'
+        }
+        const Component2 = {
+            template: '<div>Ini Halaman Component 2, hanya boleh diakses user yang sudah login saja.</div>'
+        }
+        const Component3 = {
+            template: '<div>Ini Halaman Component 3, hanya boleh diakses oleh user yang sudah login dan memiliki role sebagai admin.</div>'
         }
 
-        let vm = new Vue({
+        //Kemudian kita instansiasi object Vue Router dan tambahkan routes yang sudah kita buat tadi
+        const router = new VueRouter({
+            // Kemudian kita arahkan setiap route ke component yang kita inginkan
+            routes: [{
+                    path: '/halaman1',
+                    component: Component1,
+                },
+                {
+                    path: '/halaman2',
+                    component: Component2,
+                    meta: {
+                        login: true
+                    },
+                    beforeEnter: (to, from, next) => {
+                        if (to.matched.some(record => record.meta.login)) {
+                            let user = true;
 
+                            if (!user) {
+                                alert('Halaman ini hanya untuk user yang sudah login!')
+                                next(false)
+                            } else {
+                                next()
+                                alert('Kamu Berhasil Login!')
+                            }
+                        } else {
+                            next()
+                        }
+                    }
+
+                },
+                {
+                    path: '/halaman3',
+                    component: Component3,
+                    meta: {
+                        login: true,
+                        role: 'admin'
+                    },
+                    beforeEnter: (to, from, next) => {
+                        if (to.matched.some(record => record.meta.login)) {
+                            let user = {
+                                login: true,
+                                role: 'admin'
+                            }
+                            if (!user.login && !user.role == 'admin') {
+                                alert('Halaman ini dapat diakses yang memiliki role admin!')
+                                next(false)
+                            } else {
+                                next()
+                                alert('Kamu Berhasil Login!')
+                            }
+                        } else {
+                            next()
+                        }
+
+                    }
+                },
+            ]
+        })
+
+        //Kemudian kita tambahkan object VueRouter yang kita namakan router ke object Vue
+
+        var vm = new Vue({
             el: '#app',
-            components: {
-                'users-component': UsersComponent
-            },
-
-            data: {
-
-                users: [
-
-                    {
-                        name: 'Muhammad Iqbal Mubarok'
-                    },
-
-                    {
-                        name: 'Ruby Purwanti'
-                    },
-
-                    {
-                        name: 'Faqih Muhammad'
-                    },
-
-                ],
-
-                formUser: '',
-
-                editButton: false,
-
-                idSelected: null
-
-            },
-
-            computed: {
-
-                reverseUsers: {
-
-                    get: function () {
-
-                        return this.users.slice().reverse()
-
-                    },
-
-                    set: function (value) {
-
-                        this.users = value.slice().reverse()
-
-                    }
-
-                }
-
-            },
-
-            methods: {
-
-                addUser: function () {
-
-                    this.users.push({
-                        name: this.formUser
-                    })
-
-                    this.formUser = ''
-
-                },
-
-                editUser: function (id) {
-
-                    this.formUser = this.users[id].name
-
-                    this.editButton = true,
-
-                        this.idSelected = id
-
-                },
-
-                updateUser: function () {
-
-                    this.users[this.idSelected].name = this.formUser
-
-                    this.formUser = ''
-
-                    this.editButton = false
-
-                },
-
-                deleteUser: function (id) {
-
-                    let confirmation = confirm("Anda yakin ?")
-
-
-
-                    if (confirmation) {
-
-                        this.users = this.users.filter(function (item, index) {
-
-                            return index != id
-
-                        })
-
-                    }
-
-                }
-
-            }
-
+            router,
         })
     </script>
 
